--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "convertr"]
+	path = convertr
+	url = https://github.com/gshotwell/convertr
+	shallow = true
+	registered = true
